Fixed flexbox overlap for safari

--- a/src/components/metrics/card/MetricCardViewSection/style.css
+++ b/src/components/metrics/card/MetricCardViewSection/style.css
@@ -54,7 +54,7 @@
   width: 100%;
   padding: 5px 30px 0px 5px;
   float: left;
-  flex: 1;
+  flex: 0 0 auto;
 }
 
 .MetricCardViewSection > .StatsSection {
